# crafter

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
_old/: __main__.py  client.py  constants.py  player.py  texture.py
_old/player/: actor.py  state.py  view.py
_old/server/: server.py  world.py
crafter/: __init__.py  __main__.py  game.pyx  texture.pyx  typing.py  utils.pxd  utils.py  utils.pyx  window.py  world.pyx
resources/: blocks.toml
