[tool.poetry]
name = "crafter"
version = "0.1.0"
description = "Minecraft but in Python"
authors = ["mental <m3nta1@yahoo.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pyglet = "^1.4.9"
toml = "^0.10.0"
click = "^7.0"
websockets = "^8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
